authors-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors-api
  template:
    metadata:
      labels:
        app: authors-api
    spec:
      containers:
      - name: authors-api
        image: authors-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
