authors-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authors-api
spec:
  selector:
    app: authors-api
  ports:
  - port: 5002
    targetPort: 5002
