authorsapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorsapi
  template:
    metadata:
      labels:
        app: authorsapi
    spec:
      containers:
      - name: authorsapi
        image: authorsapi:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
          readOnly: true
        command: ["dotnet", "Techcore_Internship.AuthorsApi.dll"]
      volumes:
      - name: config-volume
        configMap:
          name: bookservice-config
---
apiVersion: v1
kind: Service
metadata:
  name: authorsapi
spec:
  selector:
    app: authorsapi
  ports:
  - port: 80
    targetPort: 5002
  type: ClusterIP
