kafka-service-wurstmeister.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: techcore
spec:
  selector:
    app: kafka
  ports:
  - port: 9092
    targetPort: 9092
  type: ClusterIP
