web-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      labels:
        app: web-api
    spec:
      containers:
      - name: web-api
        image: bookservice:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
          readOnly: true
        command: ["dotnet", "Techcore_Internship.WebApi.dll"]
      volumes:
      - name: config-volume
        configMap:
          name: bookservice-config
---
apiVersion: v1
kind: Service
metadata:
  name: web-api
spec:
  selector:
    app: web-api
  ports:
  - port: 80
    targetPort: 5001
    nodePort: 30001
  type: NodePort
